tests/mm0_mmu/fail/bad-sort32.mm0
-- provable should be after strict
provable strict sort s32;